# mcp-server-zoom-noauth

./: .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js
src/mcp_server_zoom_noauth/: __init__.py  server.py
